# unsoundness-checker

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  search.json  sitemap.xml  zensical.toml
crates/dev/: Cargo.toml
crates/dev/src/: generate_all.rs  generate_categories.rs  generate_rules.rs  main.rs
crates/evaluation/: Cargo.toml  README.md
crates/evaluation/src/: benchmark.rs  main.rs  real_world_projects.rs  unsoundness_suite.rs
crates/unsoundness_checker/: Cargo.toml
crates/unsoundness_checker/resources/extensive/: callable_ellipsis_used.md  if_type_checking_used.md  invalid_function_defaults.md  invalid_overload_implementation.md  invalid_setattr.md  mangled_dunder_instance_variable.md  mutable_generic_default.md  mutating_function_code_attribute.md  mutating_globals_dict.md  type_checking_directive_used.md  typing_any_used.md  typing_cast_used.md  typing_overload_used.md  typing_type_is_used.md
crates/unsoundness_checker/resources/rules/: callable_ellipsis_used.md  if_type_checking_used.md  invalid_function_defaults.md  invalid_overload_implementation.md  invalid_setattr.md  mangled_dunder_instance_variable.md  mutable_generic_default.md  mutating_function_code_attribute.md  mutating_globals_dict.md  setting_function_code_attribute.md  setting_function_defaults_attribute.md  type_checking_directive_used.md  typing_any_used.md  typing_cast_used.md  typing_overload_used.md  typing_type_is_used.md
crates/unsoundness_checker/src/: categories.rs  context.rs  lib.rs  rule.rs  rules.rs  version.rs
crates/unsoundness_checker/src/checker/: annotation_checker.rs  assignment_checker.rs  ast_checker.rs  expr_checker.rs  function_checker.rs  if_checker.rs  mod.rs  overload_checker.rs  tokens_checker.rs
crates/unsoundness_checker/src/checker/ast/: annotation.rs  mod.rs  utils.rs
crates/unsoundness_checker/src/checker/ast/expr/: attribute.rs  call.rs  mod.rs
crates/unsoundness_checker/src/checker/ast/statement/: assignment_statement.rs  function_definition.rs  if_statement.rs  mod.rs
crates/unsoundness_checker/src/checker/comments/: mod.rs
crates/unsoundness_checker/src/checker/tokens/: mod.rs
crates/unsoundness_checker/src/cli/: args.rs  logging.rs  mod.rs
crates/unsoundness_checker/tests/: cli_test.rs  markdown_test.rs  rule_configuration_test.rs
crates/unsoundness_checker/tests/common/: mod.rs
crates/unsoundness_checker/tests/snapshots/callable_ellipsis_used/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/extensive/: markdown_test__callable_ellipsis_used.snap  markdown_test__if_type_checking_used.snap  markdown_test__invalid_function_defaults.snap  markdown_test__invalid_overload_implementation.snap  markdown_test__invalid_setattr.snap  markdown_test__mangled_dunder_instance_variable.snap  markdown_test__mutable_generic_default.snap  markdown_test__mutating_function_code_attribute.snap  markdown_test__mutating_globals_dict.snap  markdown_test__type_checking_directive_used.snap  markdown_test__typing_any_used.snap  markdown_test__typing_cast_used.snap  markdown_test__typing_overload_used.snap  markdown_test__typing_type_is_used.snap
crates/unsoundness_checker/tests/snapshots/if_type_checking_used/: markdown_test__snippet_01.snap  markdown_test__snippet_02.snap
crates/unsoundness_checker/tests/snapshots/invalid_function_defaults/: markdown_test__snippet_01.snap  markdown_test__snippet_02_mypy.snap
crates/unsoundness_checker/tests/snapshots/invalid_overload_implementation/: markdown_test__snippet_01.snap  markdown_test__snippet_02.snap  markdown_test__snippet_02_mypy.snap  markdown_test__snippet_02_pyright.snap  markdown_test__snippet_02_ty.snap  markdown_test__snippet_03.snap  markdown_test__snippet_04.snap  markdown_test__snippet_04_mypy.snap  markdown_test__snippet_04_pyright.snap  markdown_test__snippet_05.snap  markdown_test__snippet_05_pyright.snap  markdown_test__snippet_06.snap
crates/unsoundness_checker/tests/snapshots/invalid_setattr/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/mangled_dunder_instance_variable/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/mutable_generic_default/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/mutating_function_code_attribute/: markdown_test__snippet_01.snap  markdown_test__snippet_02.snap
crates/unsoundness_checker/tests/snapshots/mutating_globals_dict/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/rules/callable_ellipsis_used/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/rules/if_type_checking_used/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/rules/invalid_function_defaults/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/rules/invalid_overload_implementation/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/rules/invalid_setattr/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/setting_function_code_attribute/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/type_checking_directive_used/: markdown_test__snippet_01.snap  markdown_test__snippet_02.snap  markdown_test__snippet_03.snap  markdown_test__snippet_04.snap  markdown_test__snippet_05.snap
crates/unsoundness_checker/tests/snapshots/typing_any_used/: markdown_test__snippet_01.snap  markdown_test__snippet_02.snap  markdown_test__snippet_03.snap  markdown_test__snippet_04.snap  markdown_test__snippet_06.snap
crates/unsoundness_checker/tests/snapshots/typing_cast_used/: markdown_test__snippet_01.snap
crates/unsoundness_checker/tests/snapshots/typing_overload_used/: markdown_test__snippet_01.snap  markdown_test__snippet_02.snap
crates/unsoundness_checker/tests/snapshots/typing_type_is_used/: markdown_test__snippet_01.snap  markdown_test__snippet_02.snap  markdown_test__snippet_03.snap  markdown_test__snippet_03_mypy.snap  markdown_test__snippet_03_pyright.snap
(+71 files in other folders)
