[package]
name = "unsoundness-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argfile = "0.2.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
colored = "3.0.0"
itertools = "0.14.0"
ruff_db = { git = "https://github.com/astral-sh/ruff/", branch = "main", features = ["os"] }
ruff_macros = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
rustc-hash = "2.1.1"
thiserror = "2.0.16"
tracing = { version = "0.1.41" }
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tracing-tree = "0.4.1"
ty_project = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ty_python_semantic = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
wild = "2.2.1"

[dev-dependencies]
insta = "1.41.1"
tempfile = "3.13.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
