[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
homepage = "https://github.com/MatthewMckee4/unsoundness-checker"
documentation = "https://github.com/MatthewMckee4/unsoundness-checker"
repository = "https://github.com/MatthewMckee4/unsoundness-checker"
authors = ["Matthew McKee <matthewmckee4@yahoo.co.uk>"]
license = "MIT"

[workspace.dependencies]

anyhow = "1.0.100"
argfile = "0.2.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
colored = "3.0.0"
dev = { path = "crates/dev" }
insta = "1.41.1"
itertools = "0.14.0"
markdown = "1.0.0"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.12.0"
regex = "1.11.1"
ruff_db = { git = "https://github.com/astral-sh/ruff/", branch = "main", features = ["os"] }
ruff_macros = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
rustc-hash = "2.1.1"
tempfile = "3.13.0"
thiserror = "2.0.16"
tracing = { version = "0.1.41" }
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tracing-tree = "0.4.1"
ty_project = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
ty_python_semantic = { git = "https://github.com/astral-sh/ruff/", branch = "main" }
unsoundness_checker = { path = "crates/unsoundness_checker" }
wild = "2.2.1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
