[package]
name = "dev"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
unsoundness_checker = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["wrap_help", "env"] }
itertools = { workspace = true }
pretty_assertions = { workspace = true }
markdown = { workspace = true }
heck = { workspace = true }
