[package]
name = "unsoundness_checker"
version = "0.0.0"
default-run = "unsoundness_checker"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "unsoundness_checker"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
argfile = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
ruff_db = { workspace = true }
ruff_linter = { workspace = true }
ruff_macros = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_index = { workspace = true }
ruff_python_parser = { workspace = true }
ruff_text_size = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
tracing-flame = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
ty_project = { workspace = true }
ty_python_semantic = { workspace = true }
wild = { workspace = true }

[dev-dependencies]
dir-test = { workspace = true }
insta = { workspace = true, features = ["filters"] }
insta-cmd = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
